# smartLessons

./: .coveragerc  .env.example  .gitignore  DEVELOPMENT_LOG.md  LCMISvisuals.html  PROJECT_RESTART_SUMMARY.md  README.md  SECURITY_MIGRATION_GUIDE.md  STRUCTURE.md  TOOLS_GUIDE.md  demo.html  documents  index.html  listening_practice_game.html  main.py  notes.md  projectNotes.md  pyproject.toml  quick_start_plan.md  railway.json  requirements.txt  restructure_repo.py  specialized  test_audio.html  test_sync.md  tutorial-training-mode.html
.github/: copilot-instructions.md
.github/workflows/: ci.yml
2_assessments/studentData/: Listening_Game_Guide.md  Updated_Game_Features.md  listening_practice_game.html
ARCHIVE_2025-09-04/: README.md
ARCHIVE_2025-09-04/GCAP3056_complex_version/: intro.html
ARCHIVE_2025-09-04/clean-aitutor-v2_backup/: README.md
AndySolution/: index.html
AndySolution/pages/: avatar.html  chatbot.html  interactive.html
DailyAssistant/: __init__.py  setup_railway.bat
DailyAssistant/cli/: __init__.py
GCAP3056/: README-assessment.md  gcap3056_notes  intro.html  watch-markdown.js
GCAP3056/week1/: README.md  index-hybrid.html  index.html
GCAP3056/week1-3/: index.html  interactiveLecture.html
GCAP3056/week12-13/: index.html
GCAP3056_backup/: intro.html
GCAP3226/: intro.html  intro_temp.html  reflective-essay-tutor.html  simulationBus56.html
GCAP3226/week1/: index.html
HKBUchatbot/: HKBUchatbot.html  HKBUchatbot01.html  app.py  research-learning-report.md
LANG0036/: assessment_completion_report.html  completed_students.csv  intro.html  pedagogy.html  testEmbed.html  training_completion_report.html
LANG0036/assess/: index.html
LANG0036/week1/: lesson.html
LCLEP/: enhanced-news.html  enhanced-paymentinfo.html  enhanced-styles.css  enhanced-userguide.html  regsiter.html
NewTemplate/: index.html
NewTemplate/js/: activities.js  ai-assistant.js  main.js  reports.js  state.js
NewTemplate/modules/: ai-assistant.html  interactive-activities.html
SimonAvatar/: UE1general.html
Template/: interactive.html  interactiveLessons.html  merge.html
UCLC1008/: index.html  package.json  refQuiz.html  server.js  test-intro-paraphrasing-teacher.html
Wheeldecide/class_wheel_project/: index.html  style.css
aitutor/: main.py
ato/: Advance_Briefing_Candidates.html  Test_Brief_Start_of_Test.html
chat/: app.py  basicChatbot.html  index.html  main.py
chat/bots/: basicBot.html
clean-aitutor-v2/: CNAME  main.py
config/: google_auth_secure.py  secure_config.py
deadline_files/: 2025-09-06.md  APR Annual Performance Review.md  Chinese med avatar.md  DEADLINE_OVERVIEW.md  LC KPI.md  Principles for AI-Enabled Practices.md  STEM internship.md  Shared poe premium account.md  Week 1-3 Fall 2025.md  apply for funding for 3056.md  gcap funding application.md  research project on goal setting chatbot and self-regulated learning.md  self access language learning materials.md  talk on flipped classroom by Simon for GE colleagues.md
docs/: MOVED_SCRIPTS_INDEX.md  QUICK_START_GUIDE.md  USAGE_PACKAGE.md  projectNotes.md
email_drafts/: plain_email_draft.txt
gcap3056_notes/: journal_rubric.md  project_rubric.md
modules/: __init__.py
newAItutor/: main.py
obsidian_notes/: synced_2025-09-05.md
operating/: 0notes.md  REORG_PLAN.md  ai_analysis_results.json  backlinks_report.xlsx  folder_structure_report.xlsx  gcap3056_community_engagement_portfolio_guide.md  generic_document_analyzer.py  markdown_cleanup_via_llm.py  migration_report.md
paperTrail/: MASTER_ACTIVITY_TRAIL.md
projects/: .cache_ggshield  Obsidian_deadline_tasks.md  notes.md
realTemplate/: PracticeDiscussion.html  ReflectAssess.html  index.html  interactiveLecture.html
screeningTest/: GenCode.py  student_codes.csv
synced_docs/: google_doc_20250906_085321.txt  test_document.md
talks/: add_headers.py  enhance_debug.py  flipped926.html  flipped926_backup.html  flipped926_debug.html  flipped926_fixed.html
tests/: conftest.py  test_app_filters.py  test_citations.py  test_embeddings.py  test_index.py  test_pedagogical_tagging.py  test_rag_format.py  test_rag_query.py
(+6416 files in other folders)
